Some forms have "Address Nickname" or "Address Label" fields that are used to identify an address. These fields were filled as address line 1.

Added a regex to find those specific fields and not fill them.

BUG=596913
TEST=FormStructureBrowserTest

Review URL: https://codereview.chromium.org/1825133002

Cr-Commit-Position: refs/heads/master@{#382851}

Former-commit-id: 477a7e9549f46f1e7aa30e4e55da85cb08be264b